# probability_estimation

./: .gitignore  README.md  dev.ipynb  pyproject.toml  utils.py
notebooks/: dev.ipynb  monotonic_nn.ipynb  xgboost.ipynb
notebooks/bank_churn/: monotonic_nn.ipynb  xgboost.ipynb
notebooks/breast_cancer/: monotonic_nn.ipynb  xgboost.ipynb
src/: calibration.py  model.py  schemas.py  utils.py
src/calibration/: README.md  calibration_plots.py  calibrator.py  isotonic_regression.py  platt_scaling.py  temperature_scaling.py
src/probability_prediction/: model.py  utils.py
src/probability_prediction/calibration/: calibrator.py
tests/: 1_create_graph.ipynb  2_get_node_context.ipynb  README.md  ast_graph.graphml  create_graph.ipynb  repo_graph.graphml  test_model.py  test_utils.py
tests/calibration/: test_calibration_plots.py  test_calibrator.py  test_isotonic_regression.py
tests/probability_prediction/: test_model.py  test_utils.py
tests/probability_prediction/calibration/: test_calibration_plots.py  test_calibrator.py  test_isotonic_regression.py  test_platt_scaling.py  test_temperature_scaling.py
tests/src/: parser.py  utils.py  walker.py
