[project]
name = "probability-prediction"
version = "0.1.0"
description = "Open source project to build a probability prediction system in Python."
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pydantic>=2.11.9,<2.12.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "unit-tests-generator>=0.1.4",
    "xgboost>=3.2.0",
]

[dependency-groups]
# Tooling — not required to run your app
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5",
  "mypy>=1.8",
  "ipykernel>=7.2.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["probability_prediction*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]  # Look inside the src directory
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true  # Shows which lines are missing in the terminal

# Ruff configuration (https://docs.astral.sh/ruff/configuration/)
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# A solid default selection for apps:
# E/F: pycodestyle+pyflakes, B: bugbear, I: import sorting, UP: pyupgrade
select = ["E", "F", "B", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
# Ruff formatter is Black-like by default; you can keep defaults or tweak.
quote-style = "double"

# Mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true  # This is pragmatic for apps early on; tighten later
files = ["src", "tests"]  # Run mypy on these folders (when invoked without explicit paths)
